--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <link rel="stylesheet" href="./tailwind.css">
     <script src="./parallax.js" type="text/javascript"></script>
     <style>
+
+        html {
+            scroll-behavior: smooth;
+        }
+
         body {
             transform: translate3d(0,0,0);
             font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -23,6 +28,10 @@
             a:hover {
                 cursor: none;
             }
+        }
+
+        .rectangle {
+            padding-top: 56.25% !important;
         }
 
         #cta .linkBorder {
@@ -60,12 +69,12 @@
             color: #0C0F0A;
         }
 
-        #skills *::selection {
-            background: #41EAD4;
+        #skills *::selection, #card2::selection {
+            background: #41EAD4 !important;
             color: #0C0F0A;
         }
 
-        #work-history *::selection {
+        #work-history *::selection, #card3::selection {
             background: #FF206E;
             color: #0C0F0A;
         }
@@ -96,9 +105,7 @@
         }
 
         .link-animation {
-            transform-origin: unset;
-            transform: scale(1.2) translate(-50%, -50%);
-            animation: link-animation 0.3s infinite;
+            opacity: 1;
         }
 
     </style>
@@ -173,13 +180,12 @@
                     </div>
                 </div>
                 <!-- CTA -->
-                <a href="javascript:void(0)" class="flex text-sm md:text-lg uppercase tracking-wider">
-                    <div id="cta" class="relative">
+                <div class="w-full flex">
+                    <a id="cta" href="#works" class="relative flex text-sm md:text-lg uppercase tracking-wider">
                         <p class="border-4 border-myBlack py-2 px-4 font-bold">See my Work</p>
                         <div class="absolute top-0 left-0 z--1 w-full h-full border-4 border-myYellow linkBorder"></div>
-                    </div>
-                    
-                </a>
+                    </a>
+                </div>
 
             </div>
 
@@ -187,21 +193,116 @@
         </div>
 
         <!-- Works -->
-        <div id="works" class="w-full h-screen">
+        <div id="works" class="w-full">
             <!-- Accent Line -->
-            <div class="w-full h-6 bg-myYellow" style="box-shadow: inset 0 0 16px rgba(112, 113, 8, 0.4);"></div>
+            <div class="w-full h-6 bg-myYellow" style="box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.2);"></div>
+            <div class="max-w-screen-xl w-full h-full mx-auto py-8 md:py-16 px-8 md:px-16 lg:px-32">
+                <!-- Heading -->
+                <h1 class="-ml-1 lg:-ml-3 yellowDecoration flex flex-wrap w-full text-4xl md:text-5xl lg:text-6xl font-black leading-tight mb-8 md:mb-16 tracking-wide md:tracking-normal">
+                    <span class="px-1 lg:px-2">Some</span>
+                    <span class="px-1 lg:px-2">of</span>
+                    <span class="px-1 lg:px-2 italic">my</span>
+                    <span class="px-1 lg:px-2">Works...</span>
+                </h1>
+                <!-- Cards Box -->
+                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 mb-8">
+                    <!-- Card -->
+                    <div id="card1" class="relative w-full h-full">
+                        <!-- Foreground -->
+                        <div class="bg-white shadow-md w-full h-full flex flex-col">
+                            <!-- Image -->
+                            <div class="rectangle relative w-full flex-shrink-0">
+                                <img src="./images/Parenting-Place.png" alt="" class="w-full h-full absolute top-0 left-0 object-cover">
+                            </div>
+                            <!-- Content -->
+                            <div class="w-full flex-1 p-4 lg:px-6 flex flex-col justify-between">
+                                <div class="w-full mb-4">
+                                    <h6 class="font-medium text-lg text-myBlack uppercase tracking-wide">Parenting Place</h6>
+                                    <p class="text-base text-gray-800">The parenting place website is a WordPress website. Every page of its site has been designed cleanly with inhouse photographer.</p>
+                                </div>
+                                <div class="w-full flex">
+                                    <a class="text-base text-yellow-800 flex" href="https://parentingplace.nz/">
+                                        View Project
+                                        <svg class="ml-2 mt-1 w-4 h-4" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M10 6H6C5.46957 6 4.96086 6.21071 4.58579 6.58579C4.21071 6.96086 4 7.46957 4 8V18C4 18.5304 4.21071 19.0391 4.58579 19.4142C4.96086 19.7893 5.46957 20 6 20H16C16.5304 20 17.0391 19.7893 17.4142 19.4142C17.7893 19.0391 18 18.5304 18 18V14M14 4H20M20 4V10M20 4L10 14" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                        </svg>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Background -->
+                        <div class="w-full h-full bg-myYellow shadow-lg absolute top-0 left-0 z--1 transform translate-x-3 translate-y-3"></div>
+                    </div>
+                    <!-- Card -->
+                    <div id="card2" class="relative w-full h-full">
+                        <!-- Foreground -->
+                        <div class="bg-white shadow-md w-full h-full flex flex-col">
+                            <!-- Image -->
+                            <div class="rectangle relative w-full flex-shrink-0">
+                                <img src="./images/FireFlour-bread.png" alt="" class="w-full h-full absolute top-0 left-0 object-cover">
+                            </div>
+                            <!-- Content -->
+                            <div class="w-full flex-1 p-4 lg:px-6 flex flex-col justify-between">
+                                <div class="w-full mb-4">
+                                    <h6 class="font-medium text-lg text-myBlack uppercase tracking-wide">Fire & Flour Bread</h6>
+                                    <p class="text-base text-gray-800">Fire & Flour makes use of Squarespace to present their hand-made community bread brand in a visually appealing way.</p>
+                                </div>
+                                <div class="w-full flex">
+                                    <a class="text-base text-teal-800 flex" href="http://www.fireandflourbread.com/">
+                                    View Project
+                                    <svg class="ml-2 mt-1 w-4 h-4" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M10 6H6C5.46957 6 4.96086 6.21071 4.58579 6.58579C4.21071 6.96086 4 7.46957 4 8V18C4 18.5304 4.21071 19.0391 4.58579 19.4142C4.96086 19.7893 5.46957 20 6 20H16C16.5304 20 17.0391 19.7893 17.4142 19.4142C17.7893 19.0391 18 18.5304 18 18V14M14 4H20M20 4V10M20 4L10 14" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                                </a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Background -->
+                        <div class="w-full h-full bg-myTeal shadow-lg absolute top-0 left-0 z--1 transform translate-x-3 translate-y-3"></div>
+                    </div>
+                    <!-- Card -->
+                    <div id="card3" class="relative w-full h-full">
+                        <!-- Foreground -->
+                        <div class="bg-white shadow-md w-full h-full flex flex-col">
+                            <!-- Image -->
+                            <div class="rectangle relative w-full flex-shrink-0">
+                                <img src="./images/unfiltered.png" alt="" class="w-full h-full absolute top-0 left-0 object-cover">
+                            </div>
+                            <!-- Content -->
+                            <div class="w-full flex-1 p-4 lg:px-6 flex flex-col justify-between">
+                                <div class="w-full mb-4">
+                                    <h6 class="font-medium text-lg text-myBlack uppercase tracking-wide">Unfiltered</h6>
+                                    <p class="text-base text-gray-800">Unfiltered TV is a global education platform, founded in New Zealand in 2015, dedicated to democratizing the knowledge and wisdom of the world's most successful business leaders.</p>
+                                </div>
+                                <div class="w-full flex">
+                                    <a class="text-base text-pink-800 flex" href="https://www.unfiltered.tv/">
+                                        View Project
+                                        <svg class="ml-2 mt-1 w-4 h-4" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M10 6H6C5.46957 6 4.96086 6.21071 4.58579 6.58579C4.21071 6.96086 4 7.46957 4 8V18C4 18.5304 4.21071 19.0391 4.58579 19.4142C4.96086 19.7893 5.46957 20 6 20H16C16.5304 20 17.0391 19.7893 17.4142 19.4142C17.7893 19.0391 18 18.5304 18 18V14M14 4H20M20 4V10M20 4L10 14" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                        </svg>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Background -->
+                        <div class="w-full h-full bg-myPink shadow-lg absolute top-0 left-0 z--1 transform translate-x-3 translate-y-3"></div>
+                    </div>
+                </div>
+
+            </div>
+
         </div>
 
         <!-- Skills -->
         <div id="skills" class="w-full h-screen">
             <!-- Accent Line -->
-            <div class="w-full h-6 bg-myTeal" style="box-shadow: inset 0 0 16px rgba(3, 99, 86, 0.4);"></div>
+            <div class="w-full h-6 bg-myTeal" style="box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.2);"></div>
         </div>
 
         <!-- Work History -->
         <div id="work-history" class="w-full h-screen">
             <!-- Accent Line -->
-            <div class="w-full h-6 bg-myPink" style="box-shadow: inset 0 0 16px rgba(47, 10, 23, 0.4);"></div>
+            <div class="w-full h-6 bg-myPink" style="box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.2);"></div>
         </div>
     </main>
     
@@ -290,10 +391,18 @@
         var links = document.querySelectorAll('a');
         links.forEach(link => {
             link.addEventListener('mouseover', () => {
-                mouse.classList.add('link-animation');
+                click1.classList.add('link-animation');
+                click2.classList.add('link-animation');
+                click3.classList.add('link-animation');
+                click4.classList.add('link-animation');
+                click5.classList.add('link-animation');
             })
             link.addEventListener('mouseleave', () => {
-                mouse.classList.remove('link-animation');
+                click1.classList.remove('link-animation');
+                click2.classList.remove('link-animation');
+                click3.classList.remove('link-animation');
+                click4.classList.remove('link-animation');
+                click5.classList.remove('link-animation');
             })
         })
 
