--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
       }
 
       .fly {
-          animation: fly 800ms;
+        animation: fly 800ms;
       }
 
       @keyframes fly {
-          0% {
-              transform: translateX(0) translateY(0) rotate(0);
-          }
+        0% {
+          transform: translateX(0) translateY(0) rotate(0);
+        }
 
-          100% {
-              transform: translateX(3rem) translateY(-0.5rem) rotate(-15deg);
-          }
+        100% {
+          transform: translateX(3rem) translateY(-0.5rem) rotate(-15deg);
+        }
       }
 
       @media screen and (min-width: 1024px) {
@@ -196,7 +196,7 @@
     </style>
     <title>Priti Rathod - Web Developer</title>
   </head>
-  <body class="relative antialiased bg-gray-200">
+  <body class="relative antialiased bg-myLightGray">
     <main class="relative overflow-hidden text-myBlack">
       <!-- Mouse -->
       <svg
@@ -257,7 +257,7 @@
       </svg>
 
       <!-- Landing -->
-      <div id="landing" class="relative w-full h-full">
+      <div id="landing" class="relative w-full h-full bg-white">
         <!-- Background -->
         <div
           class="absolute top-0 left-0 z--1 w-full h-full pointer-events-none transform scale-105 overflow-hidden"
@@ -574,7 +574,7 @@
       </div>
 
       <!-- About -->
-      <div id="skills" class="w-full">
+      <div id="skills" class="w-full bg-white">
         <!-- Accent Line -->
         <div
           class="w-full h-6 bg-myTeal"
@@ -813,7 +813,10 @@
           <!-- Form -->
 
           <div class="w-full relative -ml-2">
-            <div class="w-full bg-white shadow-md p-4 sm:p-8 lg:px-16">
+            <form
+              action=""
+              class="w-full bg-white shadow-md p-4 sm:p-8 lg:px-16"
+            >
               <p class="text-2xl md:text-4xl font-bold mb-8 leading-tight">
                 Got something to say?<span
                   class="pl-2 text-gray-700 font-normal text-sm md:text-lg"
@@ -834,6 +837,7 @@
                     type="text"
                     class="w-full focus:outline-none focus:shadow-outline border-2 border-myBlack py-2 px-4"
                     placeholder="Priti Rathod"
+                    required
                   />
                 </div>
                 <div class="flex flex-col lg:col-span-3">
@@ -846,6 +850,7 @@
                     type="email"
                     class="w-full focus:outline-none focus:shadow-outline border-2 border-myBlack py-2 px-4"
                     placeholder="example@email.com"
+                    required
                   />
                 </div>
               </div>
@@ -861,6 +866,7 @@
                   id=""
                   cols="30"
                   rows="8"
+                  required
                 ></textarea>
               </div>
 
@@ -902,7 +908,7 @@
                   />
                 </button>
               </div>
-            </div>
+            </form>
             <!-- Background -->
             <div
               class="w-full h-full bg-myPink absolute top-0 left-0 shadow-lg z--1 transform translate-x-3 translate-y-3"
@@ -1120,8 +1126,8 @@
       });
 
       //Submit Animation
-      var submit = document.querySelector('.submit');
-      var plane = document.querySelector('.plane');
+      var submit = document.querySelector(".submit");
+      var plane = document.querySelector(".plane");
 
       submit.addEventListener("click", () => {
         plane.classList.add("fly");
